syntax = "proto3";
package abi;
option java_package = "com.keystone.cold.cryptocore";
option java_outer_classname = "RCCABIProtoc";

import 'sign_request.proto';
import 'block_chain/block_chain_request.proto';

message CommandRequest {
    uint32 request_id = 1;
    oneof request_data {
        SignRequest sign_request = 2;
        BlockChainRequest block_chain_request = 3;
    }
}

message CommandResponse {
    uint32 response_id = 1;
    uint32 status = 2;
    string response = 3;
    string error_message = 4;
}
